# rust-stuff

actix/: Cargo.toml  README.md  makefile
actix-aws-lambda/: Cargo.toml  README.md
actix-aws-lambda/src/: main.rs
actix-python/: Cargo.toml  dockerfile  makefile
actix-python/src/: main.rs
actix/src/: calculator.rs  main.rs
authenticate-hf-token/: Cargo.toml
authenticate-hf-token/src/: main.rs
aws-devcontainer/: Cargo.toml  README.md
aws-devcontainer/.devcontainer/: Dockerfile  devcontainer.json
aws-devcontainer/src/: main.rs
aws-lambda-cdk/: .gitignore  Cargo.toml  README.md  app.py  build_function.sh  requirements.txt
aws-lambda-cdk/infrastructure/: rust_lambda.py
aws-lambda-cdk/src/: lib.rs  main.rs
aws-sdk-markteplace/: .gitignore  Cargo.toml  README.md
aws-sdk-markteplace/src/: main.rs
aws-sigv4-signing/: Cargo.toml  README.md  example.py
aws-sigv4-signing/src/: main.rs
aws_lambda_rust/: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
aws_lambda_rust-0.4/: Cargo.toml  README.md  serverless.yml
aws_lambda_rust/src/: main.rs
aws_lambda_rust_serverless_framework/src/: main.rs
aws_sdk_tests/: Cargo.toml
aws_sdk_tests/src/: main.rs
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: fib_bench.rs
benchmarks/src/: lib.rs
bg-daemon-manager-rs/: Cargo.toml  README.md
bg-daemon-manager-rs/src/: main.rs
dates/: Cargo.toml
dates/src/: main.rs
docker-client-rs/: Cargo.toml
docker-client-rs/src/: main.rs
git_stuff/: config.json
git_stuff/src/: main.rs
jwt-jwk-rs/: Cargo.toml  README.md  create_jwk.py  jwk.json
jwt-jwk-rs/src/: main.rs
jwt-rs/: Cargo.toml  README.md
jwt-rs/src/: main.rs
mongo-db-rs/: Cargo.toml  README.md  docker-compose.yaml
mongo-db-rs/src/: main.rs
progress-bar-download/: Cargo.toml
progress-bar-download/src/: main.rs
reqwest-mailjet-rs/: Cargo.toml
reqwest-mailjet-rs/src/: main.rs
rust-python/: Cargo.toml  makefile
rust-python/pyth/: pipeline.py
rust-python/src/: main.rs
ssh_configurator/: Cargo.toml
ssh_configurator/src/: lib.rs  main.rs  ssh_config.rs
string_manipulation/: Cargo.toml
string_manipulation/src/: main.rs
tokenizer_test/: Cargo.toml
tokenizer_test/src/: main.rs
tokio-rs-and-async/: Cargo.toml
tokio-rs-and-async/examples/async_function/: main.rs
tokio-rs-and-async/examples/custom_future/: main.rs
tokio-rs-and-async/examples/mpsc_custom/: main.rs
tokio-rs-and-async/examples/mpsc_decoupled/: main.rs
tokio-rs-and-async/examples/streams/: main.rs
tokio-rs-and-async/src/: main.rs
tokio-with-pyo3-asyncio/: Cargo.toml  README.md  handler.py  test.py
tokio-with-pyo3-asyncio/examples/: async.rs  with_body.rs
tokio-with-pyo3-asyncio/src/: main.rs
window-controller-rs/: Cargo.toml  README.md
window-controller-rs/src/: main.rs
