[package]
name = "actix-aws-lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda-web = { version = "0.1.6", features=["actix4"] }
actix-web = { version = "4.0.0-beta.8", features = ["cookies"] }
actix-http = { version = "3.0.0-beta.9" }
actix-service = { version = "2" }