[package]
name = "aws-lambda-cdk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/main.rs"

[dependencies]
lambda_runtime = "0.4.1"
lambda_http = "0.4.1"
log = "0.4.14"
serde_json = "1.0.68"
serde = "1.0.130"
simple_logger = "1.13.0"
tokio = {version = "1.12.0", features = ["full"]}
