[package]
name = "aws-sdk-markteplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aws required
aws-config = "0.5.2"
aws-sdk-marketplacemetering = "0.5.2"
aws-types = "0.5.2"

tokio = { version = "1", features = ["full"] }
# additional 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"