[package]
name = "jwt-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7.2.0"
serde = {version = "1.0.130", features = ["derive"] }
num_cpus = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
