[package]
name = "mongo-db-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.1", features = ["tokio-runtime"] }
tokio = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
