[package]
name = "progress-bar-download"
version = "0.1.0"
authors = ["philschmid <schmidphilipp1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.2"
indicatif = "0.9.0"
failure = "0.1.2"
exitfailure = "0.5.1"