[package]
name = "rust-python"
version = "0.1.0"
edition = "2018"



[dependencies]
# inline-python = { git = "https://github.com/fusion-engineering/inline-python", branch = "master" }
# pyo3 = "0.14.0"
# cpython = "0.6.0"

[dependencies.pyo3]
version = "0.14.5"
features = ["auto-initialize"]



# [package]
# name = "string-sum"
# version = "0.1.0"
# edition = "2018"

# [lib]
# name = "string_sum"
# crate-type = ["cdylib"]

# [dependencies.pyo3]
# version = "0.14.5"
# features = ["extension-module"]