[package]
name = "tokenizer_test"
version = "0.1.0"
authors = ["philschmid <schmidphilipp1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# tokenizers = { git = "https://github.com/huggingface/tokenizers", branch = "master" }

[dependencies]
tokenizers = { version = "*", git = "https://github.com/huggingface/tokenizers" }
onnxruntime ="0.0.12"