[package]
name = "tokio-rs-and-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
futures-util = "0.3.17"

# for implementing the streams example
async-stream = "0.3.2"
futures-core="0.3.19"