[package]
name = "tokio-with-pyo3-asyncio"
version = "0.1.0"
edition = "2021"

# [build-dependencies]
# pyo3-build-config = "0.15.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
serde_json = "1.0"
env_logger = "0.9"
anyhow = "1.0.53"
pyo3 = {version = "0.15.1", features = ["auto-initialize"]} 
pyo3-asyncio = {version = "0.15.0", features = ["tokio-runtime","attributes"]}
axum = "0.4.5"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.2.0", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }